Simplify test of MeasurementPoint